--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+img {
+  user-select: none;
+  user-drag: none;
+  -webkit-user-drag: none;
+}
